--- a/src/main/resources/templates/loginBySpring.html
+++ b/src/main/resources/templates/loginBySpring.html
@@ -12,10 +12,10 @@
     <div class="row justify-content-center mt-5">
         <div class="col-md-6 col-lg-4 mt-3">
             <h4>Log in Form</h4>
-            <form  th:action="@{/login}"  th:object="${userModel}" method="post">
-                <div class="form-group">
+            <form  method="post"  th:action="@{/user/loggedIn}">
+                <div  class="form-group">
                     <label>Email address</label>
-                    <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp"
+                    <input type="email" class="form-control" name="email" id="email"
                            placeholder="Enter email" autofocus required>
                     <small id="emailHelp" class="form-text text-primary">We'll never share your email with anyone else.
                     </small>
