--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,9 +10,9 @@
 
 <th:block th:include="fragments/stylesAndScripts :: navi"></th:block>
 <div class="container-fluid">
-    <div class="container-fluid">
-        <div class="row justify-content-center mt-5">
-            <a class="welcome fade-in">Welcome to electronic diary </a>
+    <div class="row justify-content-center mt-5">
+        <div class="col-md-1 col-lg-7 mt-3">
+            <a class="welcome fade-in"> Witam w mojej aplikacji Na potrzeby testowania przykładowe dane typu login oraz password znajdują w opisie aplikacji na stronie https://github.com/adrian92a/electronicdiary</a>
         </div>
     </div>
 </div>
